# lovable

./: .gitignore
server/: .gitignore  main.py  models.py  prompt.py  pyproject.toml
server/agent/: agent_service.py  core.py  tools.py
server/db/: db.py  models.py
server/utils/: persistent_store.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/project/[id]/: page.tsx
web/components/: chat.tsx  custom-loader.tsx  prompt-card.tsx
web/components/chat/: chat.tsx  created.tsx  file-creating.tsx  terminal.tsx  thinking.tsx
web/components/pages/: ChatWithComponent.tsx
web/components/viewer/: code.tsx  explorer.tsx  viewer.tsx
web/lib/: randomId.ts
